Parsing list of recipients from config file.

--- a/nacculator/get_current_data/packet_config_example.ini
+++ b/nacculator/get_current_data/packet_config_example.ini
@@ -1,9 +1,9 @@
 [DEFAULT]
 
 [credentials]
-username: roukna
-password: LetsNacc$291
-email: rsengupta@ufl.edu
+username: <username>
+password: <password>
+email: <email_id>
 [uploadpath]
 path: /path/to/text/file/to/upload
 [downloadpath]
