--- a/nacculator/get_current_data/smtp_config_example.ini
+++ b/nacculator/get_current_data/smtp_config_example.ini
@@ -3,8 +3,8 @@
 [credentials]
 host: smtp.ufl.edu
 port: 587
-my_address: rsengupta
-password: my_acc_$16_fl_rou
+my_address: <gator_name>
+password: <gator_password>
 
 [recipient_list]
-hcv_recipient: [rouknasengupta@gmail.com, rsengupta@ufl.edu]
+hcv_recipient: rouknasengupta@gmail.com,rsengupta@ufl.edu,amineni95@ufl.edu
