--- a/nacculator/get_current_data/smtp_config_example.ini
+++ b/nacculator/get_current_data/smtp_config_example.ini
@@ -7,4 +7,4 @@ my_address: <gator_name>
 password: <gator_password>
 
 [recipient_list]
-hcv_recipient: rouknasengupta@gmail.com,rsengupta@ufl.edu,amineni95@ufl.edu
+hcv_recipient: <recipient>
