--- a/nacc_utils/nacculator_runner/nacculator_cfg.ini.example
+++ b/nacc_utils/nacculator_runner/nacculator_cfg.ini.example
@@ -14,7 +14,7 @@ c1s_2a_npsylan: c1s_2_npsycloc
 c1s_2a_npsylanx: c1s_2a_npsylan
 b6s_2a1_npsylanx: c1s_2a1_npsylanx
 fu_otherneur: fu_othneur
-fu_otherneurx: fu_othneurxs
+fu_otherneurx: fu_othneurx
 fu_strokedec: fu_strokdec
 
 [filter_remove_ptid]
