clean up some code

--- a/nacc_utils/nacc_automation/packet_config_example.ini
+++ b/nacc_utils/nacc_automation/packet_config_example.ini
@@ -5,7 +5,7 @@ username: <username>
 password: <password>
 email: <email_id>
 [uploadpath]
-path: /path/to/text/file/to/upload
+path: <upload_file_path>
 [downloadpath]
 path: /tmp
 [reportpath]
