make the smtp cfg more generic

--- a/nacc_utils/nacc_automation/smtp_config_example.ini
+++ b/nacc_utils/nacc_automation/smtp_config_example.ini
@@ -1,10 +1,10 @@
 [DEFAULT]
 
 [credentials]
-host: smtp.ufl.edu
-port: 587
-my_address: <gator_name>
-password: <gator_password>
+host: <smtp host>
+port: <smtp port>
+my_address: <from address>
+password: <email password>
 
 [recipient_list]
-recipients: <recipients>
+recipients: <send list>
