adds email functionality to the nacculator docker

--- a/nacc_utils/nacculator_runner/.env_file
+++ b/nacc_utils/nacculator_runner/.env_file
@@ -3,6 +3,11 @@ NACC_PASSWORD=<your nacc password>
 NACC_EMAIL=<email used for uploading>
 REDCAP_TOKEN=<your private redcap token>
 REDCAP_SERVER=https://redcap.school.edu/redcap/api/
+SMTP_HOST=<your smtp host server>
+SMTP_PORT=<your smtp host server port>
+SMTP_FROM=<from address>
+SMTP_PASSWORD=<from addr password, if needed>
+SMTP_TO=<list of who email is going to>
 
 ##########################################################
 #DO NOT CHANGE BELOW WITHOUT UPDATING APPROPRIATE SCRIPTS#
